# lfg

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
doc/: adapters.md  architecture.md  development.md  goal.md  milestones.md  overview.md  policy.md
doc/assets/: packvet-demo.tape
scripts/: sandbox-install.sh  sandbox-npm-install.sh  smoke-docker.sh  smoke-local.sh
src/: adapters.rs  archive.rs  archive_diff.rs  builtins.rs  builtins_tests.rs  cli.rs  lib.rs  main.rs  npm.rs  npm_policy.rs  npm_registry.rs  npm_review.rs  orchestrator.rs  provider_output.rs  registry.rs  review_pipeline.rs  shims.rs  source_diff.rs
src/builtins_tests/: managers.rs  policies.rs  providers.rs  resolvers.rs  support.rs
src/core/: adapter_protocol.rs  contracts.rs  execution.rs  install_assessment.rs  install_assessment_tests.rs  install_request.rs  mod.rs  outcome.rs  policy.rs  release_age.rs  review_pipeline.rs  verdict.rs
src/ecosystems/: mod.rs
src/evidence/: archive.rs  archive_diff.rs  archive_diff_tests.rs  archive_http_tests.rs  mod.rs  (+3 more)
tests/: README.md  adapter_contracts.rs  archive.rs  archive_diff.rs  archive_diff_review.rs  archive_http.rs  builtins.rs  cli_contract.rs  crates_io_registry.rs  gem_adapter.rs  install_assessment.rs  local_provider.rs  module_layout.rs  npm_adapter.rs  npm_policy.rs  npm_registry.rs  npm_registry_http.rs  npm_review.rs  pnpm_adapter.rs  provider_prompt.rs  pypi_registry.rs  python_policy.rs  review_pipeline.rs  ruby_policy.rs  rust_policy.rs  source_diff.rs  uv_adapter.rs  yarn_adapter.rs
(+129 files in other folders)
