[package]
name = "packvet"
version = "0.1.0"
edition = "2021"
description = "Local pre-install guard for package manager installs"
license = "MIT"
repository = "https://github.com/graykode/packvet"
homepage = "https://github.com/graykode/packvet"
readme = "README.md"
keywords = ["cli", "security", "supply-chain", "packages", "guard"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
flate2 = "1.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.45"
time = { version = "0.3", features = ["parsing"] }
ureq = "3"

[profile.dist]
inherits = "release"
lto = "thin"
